--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             height: 100vh;
         }
         .form-container {
-            background-color: #fff;
+            background-color: #ccc;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
